k8s/setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maolabs
