k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maolabs-blog-ingress
  namespace: maolabs
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - blog.maolabs.com.br
      secretName: maolabs-blog-tls
  rules:
    - host: blog.maolabs.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maolabs-blog-service
                port:
                  number: 80
